--- a/gscramble/addons/sourcemod/translations/gscramble.phrases.txt
+++ b/gscramble/addons/sourcemod/translations/gscramble.phrases.txt
@@ -266,7 +266,7 @@
 	}
 	"StatsMessage"
 	{
-		"#format"		"{1:i},{2:i},{1:f}"
-		"en"			"Scramble swapped {1} out of {2} players. {f}\%"
+		"#format"	"{1:i},{2:i},{3:s}"
+		"en"		"Scramble swapped {1} out of {2} players. {3}%"
 	}
 }
